# crud_test

./: .env  .gitignore  .projenrc.py  app.py  comparison.md  makefile  prompt.md  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  secrets.enc.yaml  secrets.yaml
.github/workflows/: pull-request-lint.yml
.projen/: deps.json
instance/: cabra.db
test/: testFuncional.py  testIntegracion.py  testRendimiento.py  testSeguridad.py  testUnitarias.py
tests/: test_example.py
