[tool.poetry]
name = "crud_test"
version = "0.1.0"
description = "Proyecto CRUD de prueba."
authors = ["Jose Suarez"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.12.4"
astroid = "3.3.5"
blinker = "1.8.2"
Brotli = "1.1.0"
certifi = "2024.8.30"
charset-normalizer = "3.4.0"
click = "8.1.7"
ConfigArgParse = "1.7"
dill = "0.3.9"
Flask = "3.0.3"
Flask-Cors = "5.0.0"
Flask-Login = "0.6.3"
Flask-SQLAlchemy = "3.1.1"
gevent = "24.2.1"
geventhttpclient = "2.3.1"
greenlet = "3.1.1"
idna = "3.10"
isort = "5.13.2"
itsdangerous = "2.2.0"
Jinja2 = "3.1.4"
linecache2 = "1.0.0"
locust = "2.31.8"
MarkupSafe = "2.1.5"
mccabe = "0.7.0"
msgpack = "1.1.0"
platformdirs = "4.3.6"
psutil = "6.0.0"
pylint = "3.3.1"
python-dotenv = "1.0.1"
pyzmq = "26.2.0"
requests = "2.32.3"
six = "1.16.0"
SQLAlchemy = "2.0.35"
tomlkit = "0.13.2"
traceback2 = "1.4.0"
typing_extensions = "4.12.2"
unittest2 = "1.1.0"
urllib3 = "2.2.3"
Werkzeug = "3.0.4"
zope.event = "5.0"
zope.interface = "7.0.3"

[tool.poetry.dev-dependencies]
coverage = "7.6.3"
setuptools = "75.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
